fix: fix button layout misalign

--- a/css/profile-page-style.css
+++ b/css/profile-page-style.css
@@ -129,6 +129,7 @@
     font-size: 18px; 
     opacity: 1;
     width: 60%;
+    align-items: center;
   }
     
   .btn:hover {
